# TCP-file-transfer-daemon

./: CMakeLists.txt  README.md
Client/: client.cpp  client.h  main.cpp
Server/: main.cpp  server.cpp  server.h
